<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EmisiGas</string>
    <string name="logo">Logo</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_login">Login</string>
    <string name="enter_your_name">Enter Your Full Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="new_account">Don\'t have an account yet?<font color="#05c06f"> Register Here</font></string>
    <string name="title_register">Register</string>
    <string name="to_login">Already have an account?<font color="#05c06f"> Login Here</font></string>
    <string name="logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="tips">Tips</string>
    <string name="start_trip">Start Trip</string>
    <string name="stop_trip">Stop Trip</string>
    <string name="start_point">Your Location</string>
    <string name="vehicle">Your Vehicle</string>
    <string name="car_type">Car Type</string>
    <string name="capacity">xxxx cc</string>
    <string name="license">License</string>
    <string name="avg_consumption">Avg Consumption</string>
    <string name="last_trip">Last Trip</string>
    <string name="distance">Distance</string>
    <string name="consumption">Consumption</string>
    <string name="edit">Edit</string>
    <string name="day">Day</string>
    <string name="date">xx-xx-xxxx</string>
    <string name="profile">Profile</string>
    <string name="line">Line</string>
    <string name="text_result">This is what you earn from your vehicle</string>
    <string name="you_co_consumption_is">Your CO2 consumption is</string>
    <string name="your_mileage_is">Your mileage is</string>
    <string name="back_to_home">Back to Home</string>
    <string name="change_your_profile">Change Your Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="your_vehicle_data">Your Vehicle Data</string>
    <string name="enter_your_vehicle_brand">Enter Your Vehicle Brand</string>
    <string name="vehicle_brand">Vehicle Brand</string>
    <string name="license_plate">License Plate</string>
    <string name="enter_your_license_plate">Enter Your License Plate</string>
    <string name="machine_capacity">Machine Capacity</string>
    <string name="enter_your_machine_capacity">Enter Your Machine Capacity</string>
    <string name="name_tips">Nama Tips</string>
    <string name="description">Deskripsi</string>
    <string name="name">Full Name</string>
    <string name="jenis_bahan_bakar">Jenis Bahan Bakar Kendaraan</string>
    <string name="tahun_pembuatan">Tahun Pembuatan Kendaraan</string>
    <string name="change_your_vehicle_data">Change Your Vehicle Data</string>
    <string name="tips_desc">Follow the tips given here to help reduce vehicle exhaust emissions</string>
    <string-array name="data_name">
        <item>Sampah Organik</item>
        <item>Sampah Anorganik</item>
        <item>Sampah B3</item>
    </string-array>
    <string-array name="data_photo">
        <item tools:ignore="TypographyDashes">https://waste4change.com/blog/wp-content/uploads/Composting-NYC-1024x756-1.jpg</item>
        <item>https://sustaination.id/wp-content/uploads/2021/02/jasmin-sessler-5Wfttm2CjeI-unsplash.jpg</item>
        <item>https://blogpictures.99.co/baterai-bekas.jpg</item>
    </string-array>
</resources>